# nearcon23_image_gen

./: .env  .gitignore  pyproject.toml
app/: main.py
app/image_gen/: ai_prompt_templates.py  create_comic_panel.py  gen_image.py  story_gen.py  utils.py
